--- a/myStartpage/css/style.css
+++ b/myStartpage/css/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-	background-color: #ABCDEF ;
+	background-color: #323334 ;
 	border-radius: 14px;
 	box-shadow: 0px 0px 5px 3px #16182077;
 	color: #ebdbb2;
