trying to change text color

--- a/myStartpage/css/style.css
+++ b/myStartpage/css/style.css
@@ -129,7 +129,7 @@ h3::after {
 
 .linksbox {
 	text-align: center;
-	color: #ebdbb2;
+	color: #1e3d59;
 	text-decoration: none;
 	width: 8em;
 	box-shadow: 5px 5px 3px rgba(27, 34, 38, 0.55);
