--- a/myStartpage/css/style.css
+++ b/myStartpage/css/style.css
@@ -129,7 +129,7 @@ h3::after {
 
 .linksbox {
 	text-align: center;
-	color: #1e3d59;
+	color: #f6ead4;
 	text-decoration: none;
 	width: 8em;
 	box-shadow: 5px 5px 3px rgba(27, 34, 38, 0.55);
@@ -168,7 +168,7 @@ h3::after {
 
 input {
 	background: none;
-	color: #323334;
+	color: #f6ead4;
 	width: 15px;
 	font: inherit;
 	text-align: center;
@@ -179,7 +179,7 @@ input {
 }
 textarea:focus,
 input:focus {
-	color: #1e3d59;
+	color: #f6ead4;
 	outline: none;
 	width: 30%;
 }
