--- a/myStartpage/css/style.css
+++ b/myStartpage/css/style.css
@@ -12,7 +12,7 @@ html {
 }
 
 body {
-	background-color: #1e3d59;
+	background-color: #324B6E;
 	border-radius: 14px;
 	box-shadow: 0px 0px 5px 3px #16182077;
 	color: #ebdbb2;
