--- a/myStartpage/css/style.css
+++ b/myStartpage/css/style.css
@@ -14,7 +14,7 @@ html {
 body {
 	background-color: #324B6E;
 	border-radius: 14px;
-	box-shadow: 0px 0px 5px 3px #16182077;
+	box-shadow: 0px 0px 0px 0px #16182077;
 	color: #ebdbb2;
 	display: flex;
 	flex-direction: column;
@@ -27,7 +27,7 @@ p {
 	margin: 0;
 }
 p span {
-	color: #8ec07c;
+	color: #EFDECD;
 	font-weight: bold;
 }
 
