theme should be all set

--- a/myStartpage/css/style.css
+++ b/myStartpage/css/style.css
@@ -2,7 +2,7 @@ html {
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: #EFDECD;
+	background-color: #091A32;
 	font: 18px monospace;
 	height: 100%;
 }
